Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/Configuracion_SLA__c.object-meta.xml
<CustomObject>
    <label>Configuracion SLA</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Nombre de Configuracion SLA</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>