Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <formula>IF(TODAY() &gt; FechaVigenciaFin__c, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>