Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/CdsObservacion__c.field-meta.xml
<CustomField>
    <fullName>CdsObservacion__c</fullName>
    <label>CdsObservacion</label>
    <type>TextArea</type>
</CustomField>