Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/Cias__c.field-meta.xml
<CustomField>
    <fullName>Cias__c</fullName>
    <label>Cias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>