Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/Comparacion__c.field-meta.xml
<CustomField>
    <fullName>Comparacion__c</fullName>
    <label>Comparacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>