Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/FechaVigenciaFin__c.field-meta.xml
<CustomField>
    <fullName>FechaVigenciaFin__c</fullName>
    <label>FechaVigenciaFin</label>
    <type>Date</type>
</CustomField>