Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/FechaVigenciaIni__c.field-meta.xml
<CustomField>
    <fullName>FechaVigenciaIni__c</fullName>
    <label>FechaVigenciaIni</label>
    <type>Date</type>
</CustomField>