Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/MensajeError__c.field-meta.xml
<CustomField>
    <fullName>MensajeError__c</fullName>
    <label>Mensaje Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>