Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/NombreCampo__c.field-meta.xml
<CustomField>
    <fullName>NombreCampo__c</fullName>
    <label>NombreCampo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>