Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/Proyectos__c.field-meta.xml
<CustomField>
    <fullName>Proyectos__c</fullName>
    <label>Proyectos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>