Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/TipoCampo__c.field-meta.xml
<CustomField>
    <fullName>TipoCampo__c</fullName>
    <label>TipoCampo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>