Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/fields/ValorCampo__c.field-meta.xml
<CustomField>
    <fullName>ValorCampo__c</fullName>
    <label>ValorCampo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>