Inmob-Salesforce/force-app/main/default/objects/Configuracion_SLA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TipoCampo__c</columns>
    <columns>ValorCampo__c</columns>
    <columns>NombreCampo__c</columns>
    <columns>Comparacion__c</columns>
    <columns>Proyectos__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>